# ai-handover

./: .gitignore  BUSINESS.md  CLAUDE.md  LICENSE  OWNER-TASKS.md  PIVOT-ANALYSIS.md  PRIVACY.md  ROADMAP.md  SETUP.md  TERMS.md  VISION.md  electron.vite.config.ts  package-lock.json  package.json
.claude/: settings.local.json
backend/: backend.spec  config.py  main.py  pyproject.toml  requirements.txt
backend/ai/: claude_provider.py  openai_provider.py  provider.py
backend/models/: database.py  schemas.py
backend/routers/: chat.py  index.py  projects.py  settings.py
backend/services/: chunker.py  crypto.py  file_watcher.py  git_service.py  indexer.py  parser.py  rag.py
backend/tests/: test_api_integration.py  test_chunker.py  test_file_watcher.py  test_parser.py  test_provider.py  test_rag.py  test_vector_store.py
backend/vector_store/: chroma.py
landing/: index.html
scripts/: build-backend.bat  build-backend.sh  prepare-backend.bat
src/main/: backend.ts  index.ts  ipc-handlers.ts  tray.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  env.d.ts
src/renderer/src/api/: client.ts
src/renderer/src/assets/: main.css
src/renderer/src/components/Chat/: ChatInput.tsx  ChatPanel.tsx  HandoverWelcome.tsx  MessageBubble.tsx
src/renderer/src/components/Layout/: MainLayout.tsx  Sidebar.tsx
src/renderer/src/components/Projects/: IndexProgress.tsx  ProjectHeader.tsx
src/renderer/src/hooks/: useIndexStatus.ts
src/renderer/src/stores/: chatStore.ts  projectStore.ts
src/renderer/src/types/: index.ts
(+1 files in other folders)
