[project]
name = "ai-handover-backend"
version = "1.0.0"
description = "AI Handover backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "chromadb>=0.5.0",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "watchdog>=5.0.0",
    "pathspec>=0.12.0",
    "chardet>=5.2.0",
    "pydantic>=2.9.0",
    "aiosqlite>=0.20.0",
    "sse-starlette>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=3.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
